src/test/ui/error-codes/E0040.stderr
error[E0040]: explicit use of destructor method
  --> $DIR/E0040.rs:13:7
   |
LL |     x.drop();
   |       ^^^^ explicit destructor calls not allowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0040`.
